# turinsights_backend

./: .dockerignore  .env.example  .gitignore  README.md  backend.dockerfile  celeryworker.dockerfile  debug.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  worker-start.sh
alembic/: env.py
alembic/versions/: 48cfd5be23bf_add_relationsuipath.py  48d424fda71a_deleted_item_table.py  63d9b81c2bc4_added_synctimes_table.py  6ae2d3c4854e_add_process_columns_to_process_table.py  6b9660b9c4e1_updatednullables.py  704b34356b18_add_trackedprocess_model.py  7bcebd8f265f_add_item_model.py  8188d671489a_deeper_authentication.py  a3991cd5f6af_added_uipath_base_columns.py  c1374513345c_added_trackedqueues_added_enable_to_.py  c4f38069dc24_first_revision.py
app/: BasicAPITests.ipynb  backend_pre_start.py  celeryworker_pre_start.py  debugstuff.py  initial_data.py  main.py  tests_pre_start.py
app/.ipynb_checkpoints/: main-checkpoint.py
app/api/: deps.py
app/core/: celery_app.py  config.py  security.py  uipapiconfig.py
app/crud/: __init__.py  base.py  crud_orchestratorapi.py  crud_token.py  crud_tracking.py  crud_uipathtoken.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/frontend/: mainrouter.py  schedules.py
app/models/: __init__.py  item.py  orchestratorapi.py  schedulers.py  token.py  uipathtoken.py  user.py
app/schedules/: scheduler.py
app/schemas/: __init__.py  base_schema.py  orchestratorapi.py  orchestratorwebhooks.py  token.py  tracking.py  uipathtoken.py  user.py  (+1 more)
scripts/: test-backend-docker.sh  test.sh  tests-local.sh
(+31 files in other folders)
