[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
inboard = "0.69.0"
python-multipart = "^0.0.5"
email-validator = "2.2.0"
requests = "^2.28.1"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.1.0"
emails = "^0.6.0"
raven = "^6.10.0"
jinja2 = "^3.1.2"
alembic = "^1.8.1"
sqlalchemy = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.23.1"
psycopg2-binary = "^2.9.5"
setuptools = "^65.6.3"
argon2-cffi = "^21.3.0"
authlib = "^1.2.1"
uipath-orchestrator-rest ="^18.1"
odata-query = "^0.9.0"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
pydantic = "2.8.2"
pydantic-settings = "^2.4.0"
fastapi = "^0.112.0"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.2"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
sqlalchemy2-stubs = "^0.0.2a29"
pytest-cov = "^4.0.0"
debugpy = "^1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
